tests/error/errors_on_usage/shadow_extern.py
from guppylang import guppy

x = guppy._extern("x", ty="int")


@guppy
def main(b: bool) -> int:
    if b:
        x = 4
    return x


main.compile_function()
